# R03_fingerprint_sensor

./: .gitignore  README.md  fingerprint_manager_cli.py  main.py  pyproject.toml  ruff.toml
src/: config.py  logger.py
src/core/: enroll.py  enroll_service.py  exceptions.py  fingerprint_service.py  identify.py  identify_service.py  sensor.py  sensor_service.py  status.py
src/features/: encrypt.py  enroll.py  identify.py
src/security/: encrypt.py
src/utils/: encrypt.py  logger.py  setup_paths.py
